@@ -144,6 +144,8 @@
 	$has_error_description_no_boinc_grundwerte_table = "Table boinc_grundwerte does not exist!";
 	$has_error_description_no_boinc_werte_table = "Table boinc_werte does not exist!";
 	$has_error_description_no_boinc_werte_day_table = "Table boinc_werte_day does not exist!";
-	$has_error_description_no_boinc_username = "No value for boinc_name is set in table boinc_user!"
+	$has_error_description_no_boinc_username = "No value for boinc_name is set in table boinc_user!";
+
+	$nav_help_sgforum = "get Help (SG-Forum)";
 
 ?>
